objects/OSM_Label__mdt.object
<CustomObject>
    <fields>
        <fullName>OSM_AR_INVOICES__c</fullName>
        <label>OSM AR-INVOICES</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_BOLT_Interface_Anonymous_User__c</fullName>
        <label>OSM BOLT Interface Anonymous User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Credit_Memo__c</fullName>
        <label>OSM Credit Memo</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_INTERFACE_LINE_ATTRIBUTE4__c</fullName>
        <label>OSM INTERFACE_LINE_ATTRIBUTE4</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Intercompany_Balancing_Segment__c</fullName>
        <label>OSM Intercompany Balancing Segment</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Intercompany_Discount_Segment__c</fullName>
        <label>OSM Intercompany Discount Segment</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Intercompany_Internal_Segment__c</fullName>
        <label>OSM Intercompany Internal Segment</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Intercompany_Revenue_Segment__c</fullName>
        <label>OSM Intercompany Revenue Segment</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Intercompany_Tax_Segment__c</fullName>
        <label>OSM Intercompany Tax Segment</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Negative__c</fullName>
        <label>OSM Negative</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Operating_Unit__c</fullName>
        <label>OSM Operating Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_REFERENCE10__c</fullName>
        <label>OSM REFERENCE10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_REFERENCE1__c</fullName>
        <label>OSM REFERENCE1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_REFERENCE2__c</fullName>
        <label>OSM REFERENCE2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_System_Code__c</fullName>
        <label>OSM System Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_TRANSACTION_INFO_CONTEXT__c</fullName>
        <label>OSM TRANSACTION_INFO_CONTEXT</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_TRX_TYPE__c</fullName>
        <label>OSM TRX_TYPE</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Term_Name__c</fullName>
        <label>OSM Term Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_User_JE_Category_Name__c</fullName>
        <label>OSM User JE Category Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_User_JE_Source_Name__c</fullName>
        <label>OSM User JE Source Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Actual_Flag__c</fullName>
        <label>OSM WS Actual Flag</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Balancing_Segment__c</fullName>
        <label>OSM WS Balancing Segment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Batch_Source_Name__c</fullName>
        <label>OSM WS Batch Source Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Chart_Of_Account__c</fullName>
        <label>OSM WS Chart Of Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Credit_Memo__c</fullName>
        <label>OSM WS Credit Memo</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Currency_Conversion_Rate__c</fullName>
        <label>OSM WS Currency Conversion Rate</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Currencycode__c</fullName>
        <label>OSM WS Currencycode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Discount_Segment__c</fullName>
        <label>OSM WS Discount Segment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Entity_Code__c</fullName>
        <label>OSM WS Entity Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_External_Segment__c</fullName>
        <label>OSM WS External Segment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_External__c</fullName>
        <label>OSM WS External</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_In_Created_By__c</fullName>
        <label>OSM WS In Created By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Interface_Line_Attribute3__c</fullName>
        <label>OSM WS Interface Line Attribute3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Interface_Line_Context__c</fullName>
        <label>OSM WS Interface Line Context</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Internal_Segment5__c</fullName>
        <label>OSM WS Internal Segment5</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Internal_Segment__c</fullName>
        <label>OSM WS Internal Segment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Internal__c</fullName>
        <label>OSM WS Internal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Invoice_Type__c</fullName>
        <label>OSM WS Invoice Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Invoice__c</fullName>
        <label>OSM WS Invoice</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_LineType__c</fullName>
        <label>OSM WS LineType</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Revenue_Segment__c</fullName>
        <label>OSM WS Revenue Segment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Segment3__c</fullName>
        <label>OSM WS Segment3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Segment6__c</fullName>
        <label>OSM WS Segment6</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Segment7__c</fullName>
        <label>OSM WS Segment7</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Tax_Segment__c</fullName>
        <label>OSM WS Tax Segment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_USLedgerName__c</fullName>
        <label>OSM WS USLedgerName</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_USLedger__c</fullName>
        <label>OSM WS USLedger</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_User_Currency_Conversion_Type__c</fullName>
        <label>OSM WS User Currency Conversion Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_WS_Zero__c</fullName>
        <label>OSM WS Zero</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_c__c</fullName>
        <label>OSM_c</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_i__c</fullName>
        <label>OSM i</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>OSM Label</label>
    <pluralLabel>OSM Labels</pluralLabel>
</CustomObject>